# shapr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: ArgParser.hpp  CLI.hpp  Exception.hpp  IMeshReader.hpp  IMeshWriter.hpp  Mesh.hpp  MeshAnalyzer.hpp  MeshConverter.hpp  Transform.hpp
include/formats/: ObjReader.hpp  StlWriter.hpp
src/: ArgParser.cpp  CLI.cpp  MeshAnalyzer.cpp  MeshConverter.cpp  Transform.cpp  main.cpp
src/formats/: ObjReader.cpp  StlWriter.cpp
tests/: ArgParserTests.cpp  CLITests.cpp  CMakeLists.txt  MeshAnalyzerTests.cpp  MeshConverterTests.cpp  ObjReaderTests.cpp  StlWriterTests.cpp  TransformTests.cpp
